--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
     defaultConfig {
-        applicationId "com.example.arcorebaka"
+        applicationId "com.upce.ar"
         minSdkVersion 24
         targetSdkVersion 30
         versionCode 1
@@ -30,7 +30,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    implementation "com.google.ar.sceneform.ux:sceneform-ux:1.7.0"
+    implementation "com.google.ar.sceneform.ux:sceneform-ux:1.12.0"
     implementation 'com.karumi:dexter:5.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
 
@@ -119,6 +119,8 @@ sceneform.asset('sampledata/superman/superman.gltf',
         'default',
         'sampledata/superman/superman.sfa',
         'src/main/res/raw/superman')
+
+
 
 sceneform.asset('sampledata/batman/batman.gltf',
         'default',
